# nmpde-projects

.github/workflows/: ci.yaml
EspositoGrassiVenezia/: .gitignore  Singularity.def  job.sh
EspositoGrassiVenezia/.github/workflows/: ci.yaml
EspositoGrassiVenezia/Materiale_per_esame/: transport_term.cpp
EspositoGrassiVenezia/Materiale_per_esame/Elliptic/1D/: Elliptic1D.cpp  Elliptic1D.hpp
EspositoGrassiVenezia/Materiale_per_esame/Elliptic/2D/: Elliptic.cpp  Elliptic.hpp
EspositoGrassiVenezia/Materiale_per_esame/Navier-Stokes/: Stokes.cpp  Stokes.hpp
EspositoGrassiVenezia/Materiale_per_esame/Parabolic/1D/: Parabolic1D.cpp  Parabolic1D.hpp  main.cpp
EspositoGrassiVenezia/Materiale_per_esame/Parabolic/2D/: Parabolic.cpp  Parabolic.hpp  main.cpp
EspositoGrassiVenezia/brain/: CMakeLists.txt
EspositoGrassiVenezia/brain-nD/: CMakeLists.txt
EspositoGrassiVenezia/brain-nD/src/: BRAIN.cpp  BRAIN.hpp  main.cpp
EspositoGrassiVenezia/brain/src/: BRAIN-1D.cpp  BRAIN-1D.hpp  main-1D.cpp
EspositoGrassiVenezia/text/: webpage.url
